client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service
  labels:
    app: client-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service
        image: "ayman909/client-service:v2"  # Replace with your actual gateway image
        ports:
        - containerPort: 8080  # Port exposed by your gateway container
