eureka-deployemant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: "ayman909/eureka:v1"  # Replace with your desired Eureka image
        ports:
        - containerPort: 8761  # Eureka default port
