finance-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-service
  labels:
    app: finance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-service
  template:
    metadata:
      labels:
        app: finance-service
    spec:
      containers:
      - name: finance-service
        image: "ayman909/finance-service:v2"  # Replace with your actual gateway image
        ports:
        - containerPort: 8080  # Port exposed by your gateway container
