gateway-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: "ayman909/gateway:v1"  # Replace with your actual gateway image
        ports:
        - containerPort: 8222  # Port exposed by your gateway container
