model-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-model
  labels:
    app: ml-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-model
  template:
    metadata:
      labels:
        app: ml-model
    spec:
      containers:
      - name: ml-model
        image: "ayman909/model"  # Replace with your actual gateway image
        ports:
        - containerPort: 5000  # Port exposed by your gateway container
