transactions-db-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transactions-db
  name: transactions-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions-db
  template:
    metadata:
      labels:
        app: transactions-db
    spec:
      containers:
      - image: mysql:8.0.33
        name: mysql
        ports:
        - containerPort: 3306
          name: transactions-db
        volumeMounts:
        - mountPath: /var/lib/mysql 
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
