client-client-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client-db
  name: client-db
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 3306
    targetPort: 3306
  selector:
    app: client-db
