frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5555           # The port inside the cluster that the gateway listens on
      targetPort: 80      # The target port on the container (same as containerPort)
