gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8222           # The port inside the cluster that the gateway listens on
      targetPort: 8222      # The target port on the container (same as containerPort)
      nodePort: 31001       # External port on the nodes (exposed for external access)
