model-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-model
  labels:
    app: ml-model
spec:
  type: ClusterIP
  selector:
    app: ml-model
  ports:
    - protocol: TCP
      port: 5000           # The port inside the cluster that the gateway listens on
      targetPort: 5000      # The target port on the container (same as containerPort)
