transactons-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  labels:
    app: transactions-service
spec:
  type: ClusterIP
  selector:
    app: transactions-service
  ports:
    - protocol: TCP
      port: 9003         # The port inside the cluster that the gateway listens on
      targetPort: 8080      # The target port on the container (same as containerPort)
